# GaussianAvatars

./: train.py
chumpy/: pyproject.toml
flame_model/: flame.py
gaussian_renderer/: __init__.py
